<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".createelection.CreateElectionThree"
  >

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Election Details"
        app:titleTextColor="@color/white"
        >
      </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
      android:id="@+id/select_voting_algorithm_label_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:fontFamily="@font/raleway_bold"
      android:text="@string/select_voting_algorithm"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/appBarLayout"
      />

    <androidx.cardview.widget.CardView
      android:id="@+id/cardView_algo"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_margin="10dp"
      android:elevation="10dp"
      app:layout_constraintBottom_toTopOf="@+id/submit_details_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/select_voting_algorithm_label_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/edittext_bg">
          <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >
            <RadioGroup
              android:id="@+id/radioGroup"
              android:layout_width="351dp"
              android:layout_height="618dp"
              android:layout_marginStart="8dp"
              android:layout_marginLeft="8dp"
              android:layout_marginTop="12dp"
              android:orientation="vertical"
              >


              <RadioButton
                android:id="@+id/radio_button_oklahoma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/oklahoma"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_range_voting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/rangevoting"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_ranked_pairs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/rankedpairs"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_sav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/satisfaction_approval_voting"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_smith_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/smithset"
                android:textSize="20sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_spav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/sequential_proportional_approval_voting"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/approval"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_exhaustive_ballot_with_dropoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/exhaustive_ballot_with_dropoff"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_copeland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/copeland"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_uncovered_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/uncovered_set"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_broda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/borda"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_minimax_condorcet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/minimax_condorcet"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_nanson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/nanson"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_kemeny_young"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/kemeny_young"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_random_ballot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/random_ballot"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_contingent_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/contingent_method"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />


              <RadioButton
                android:id="@+id/radio_button_instant_runoff_2_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/instant_runoff_2_round"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_baldwin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/baldwin"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />

              <RadioButton
                android:id="@+id/radio_button_exhaustive_ballot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/exhaustive_ballot"
                android:textSize="18sp"
                app:buttonTint="@color/yellowTint"
                />
            </RadioGroup>
          </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <android.widget.Button
      android:id="@+id/submit_details_btn"
      android:text="@string/next"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/rounded_button"
      android:backgroundTint="@color/yellowTint"
      android:fontFamily="@font/raleway_bold"
      android:textColor="@color/white"
      android:textSize="24sp"
      android:layout_margin="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>


</layout>