<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".displayelections.ElectionActivity"
  >
  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="Election Details"
      app:titleTextColor="@color/white"
      >
    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <TextView
    android:id="@+id/enter_candidate_name_label_tv"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/enter_candidate_s_name"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="15dp"
    android:textSize="24sp"
    android:textColor="@color/black"
    android:fontFamily="@font/raleway_bold"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/appBarLayout"
    />

  <EditText
    android:id="@+id/candidate_et"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_bg"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/enter_candidate_name_label_tv"
    />

  <android.widget.Button
    android:id="@+id/add_candidate_btn"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:background="@drawable/rounded_button"
    android:backgroundTint="@color/logo_yellow"
    android:elevation="5dp"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/raleway_bold"
    android:text="@string/add"
    android:textColor="@color/white"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/candidate_et"
    />

  <TextView
    android:id="@+id/list_label_tv"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/candidates"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="15dp"
    android:textSize="24sp"
    android:textColor="@color/black"
    android:fontFamily="@font/raleway_bold"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/add_candidate_btn"
    />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/names_rv"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/list_label_tv"
    />
  <TextView
    android:id="@+id/swipe_tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/raleway_reg"
    android:text="@string/swipe_to_delete_candidate_s_name"
    android:textAlignment="center"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/names_rv"
    android:gravity="center_horizontal"
    />

  <android.widget.Button
    android:id="@+id/submit_details_btn"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:background="@drawable/rounded_button"
    android:backgroundTint="@color/logo_green"
    android:fontFamily="@font/raleway_bold"
    android:text="@string/next"
    android:elevation="5dp"
    android:textColor="@color/white"
    android:textSize="24sp"
    android:layout_marginBottom="30dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>