<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".login.LoginActivity"
  >

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      >

      <android.widget.Button
        android:id="@+id/login_btn"
        style="@style/MainButtonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:backgroundTint="@color/logo_green"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/raleway_bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_et"
        />

      <ImageView
        android:id="@+id/app_logo_iv"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agora"
        />

      <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/greenTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        />

      <TextView
        android:id="@+id/username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/user_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_iv"
        />

      <EditText
        android:id="@+id/login_user_name_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/raleway_reg"
        android:hint="@string/user_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_label"
        />

      <TextView
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_name_et"
        />

      <EditText
        android:id="@+id/login_password_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/raleway_reg"
        android:hint="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:passwordToggleEnabled="true"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>


</layout>